<resources>
    <string name="app_name">EtereaTesis2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="title_activity_login">Login</string>
    <string name="spinner_prompt_pais">Seleccione País</string>
    <string name="spinner_prompt_provincia">Seleccione Provincia</string>
    <string name="spinner_prompt_localidad">Seleccione Localidad</string>
    <string name="spinner_prompt_calle">Seleccione Calle</string>

    <string name="prompt_condicion_iva">Seleccione condición IVA</string>

    <string-array name="condicion_iva_array">
        <item>Responsable Inscripto</item>
        <item>Consumidor final</item>
    </string-array>

</resources>